--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -157,14 +157,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[prf_str1]:\n",
+      "A imp B .hyp\n",
+      "B imp C .hyp\n",
+      "{{\n",
+      "  A .hyp\n",
+      "  B     .imp elim 1,3\n",
+      "  C     .imp elim 2,4\n",
+      "}}\n",
+      "A imp C .imp intro 3-5\n",
+      "\n",
+      "[prf_str2]:\n",
+      "A imp B\t .hyp\n",
+      "B imp C\t .hyp\n",
+      "{{\n",
+      "  A\t .hyp\n",
+      "  B\t .imp elim 1,3\n",
+      "  C\t .imp elim 2,4\n",
+      "}}\n",
+      "A imp C\t .imp intro 3-5\n",
+      "\n",
+      "[prf_str3]:\n",
+      "A imp B .hyp\n",
+      "B imp C .hyp\n",
+      "{{\n",
+      "  A .hyp\n",
+      "  B     .imp elim 1,3\n",
+      "  C     .imp elim 2,4\n",
+      "}}\n",
+      "A imp C .imp intro 3-5\n",
+      "\n",
+      "[prf_str4]:\n",
+      "A imp B\t .hyp\n",
+      "B imp C\t .hyp\n",
+      "{{\n",
+      "  A\t .hyp\n",
+      "  B\t .imp elim 1,3\n",
+      "  C\t .imp elim 2,4\n",
+      "}}\n",
+      "A imp C\t .imp intro 3-5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Prefixing each line with line number is up to you.\n",
-    "# If you do not supply the line numbers, the parser will \n",
-    "# do it automatically.\n",
-    "prf_str = '''\n",
+    "# You may or may not prefix each line with line number.\n",
+    "# The parser can assign the correct line number \n",
+    "# to each node anyway.\n",
+    "\n",
+    "prf_str1 = '''\n",
+    "1. A imp B .hyp\n",
+    "2. B imp C .hyp\n",
+    "proves\n",
+    "  3. A .hyp\n",
+    "  proves\n",
+    "  4. B     .imp elim 1,3\n",
+    "  5. C     .imp elim 2,4\n",
+    "6. A imp C .imp intro 3-5\n",
+    "'''\n",
+    "# or,\n",
+    "prf_str2 = '''\n",
+    "│1. A imp B\t .hyp\n",
+    "│2. B imp C\t .hyp\n",
+    "├─\n",
+    "││3. A\t .hyp\n",
+    "│├─\n",
+    "││4. B\t .imp elim 1,3\n",
+    "││5. C\t .imp elim 2,4\n",
+    "│6. A imp C\t .imp intro 3-5\n",
+    "'''\n",
+    "# or, above two without numbering\n",
+    "prf_str3 = '''\n",
     "A imp B .hyp\n",
     "B imp C .hyp\n",
     "proves\n",
@@ -174,28 +244,80 @@
     "  C     .imp elim 2,4\n",
     "A imp C .imp intro 3-5\n",
     "'''\n",
-    "my_proof = parse_fitch(prf_str)"
+    "# or,\n",
+    "prf_str4 = '''\n",
+    "│A imp B\t .hyp\n",
+    "│B imp C\t .hyp\n",
+    "├─\n",
+    "││A\t .hyp\n",
+    "│├─\n",
+    "││B\t .imp elim 1,3\n",
+    "││C\t .imp elim 2,4\n",
+    "│A imp C\t .imp intro 3-5\n",
+    "'''\n",
+    "# Convert either string to the following.\n",
+    "'''\n",
+    "A imp B\t .hyp\n",
+    "B imp C\t .hyp\n",
+    "{{\n",
+    "  A\t .hyp\n",
+    "  B\t .imp elim 1,3\n",
+    "  C\t .imp elim 2,4\n",
+    "}}\n",
+    "A imp C\t .imp intro 3-5\n",
+    "'''\n",
+    "\n",
+    "for i in range(1, 5):\n",
+    "  prf_str_name = f\"prf_str{i}\"\n",
+    "  prf_str = eval(prf_str_name)\n",
+    "  print(f\"[{prf_str_name}]:\")\n",
+    "  lines = get_str_li(prf_str, tabsize=2)\n",
+    "  print_lines(lines)    \n",
+    "  print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A imp B .hyp\n",
+      "{{\n",
+      "  A or C .hyp\n",
+      "  {{\n",
+      "    A .hyp\n",
+      "    B .imp elim 1,3\n",
+      "    B or C .or intro 4\n",
+      "    C .hyp\n",
+      "    B or C .or intro 6\n",
+      "  }}\n",
+      "  B or C .or elim 2,3-5,6-7\n",
+      "}}\n",
+      "A or C imp B .or C imp intro 2-8\n"
+     ]
+    }
+   ],
    "source": [
-    "prf_str = '''A imp B hyp\n",
+    "prf_str = '''\n",
+    "1. A imp B .hyp\n",
     "proves\n",
-    "  A or C hyp\n",
+    "  2. A or C .hyp\n",
     "  proves\n",
-    "    A hyp\n",
+    "    3. A .hyp\n",
     "    proves\n",
-    "    B imp elim 1,3\n",
-    "    B or C or intro 4\n",
-    "    C hyp\n",
+    "    4. B .imp elim 1,3\n",
+    "    5. B or C .or intro 4\n",
+    "    6. C .hyp\n",
     "    proves\n",
-    "    B or C or intro 6\n",
-    "  B or C or elim 2,3-5,6-7\n",
-    "A or C imp B or C imp intro 2-8'''\n"
+    "    7. B or C .or intro 6\n",
+    "  8. B or C .or elim 2,3-5,6-7\n",
+    "9. A or C imp B .or C imp intro 2-8'''\n",
+    "lines = get_str_li(prf_str, tabsize=2)\n",
+    "print_lines(lines)\n"
    ]
   }
  ],
