--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -319,6 +319,146 @@
     "lines = get_str_li(prf_str, tabsize=2)\n",
     "print_lines(lines)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "│2. B\t .hyp\n",
+      "├─\n",
+      "│3. A and B\t .and intro\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf_str = '''\n",
+    "1. A .hyp\n",
+    "2. B  .hyp\n",
+    "proves\n",
+    "3. A and B .and intro\n",
+    "'''\n",
+    "print(parse_fitch(prf_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp\n",
+      "│2. B imp C\t .hyp\n",
+      "├─\n",
+      "││3. A\t .hyp\n",
+      "│├─\n",
+      "││4. B\t .imp elim 1,3\n",
+      "││5. C\t .imp elim 2,4\n",
+      "│6. A imp C\t .imp intro 3-5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf_str = '''\n",
+    "1. A imp B .hyp\n",
+    "2. B imp C .hyp\n",
+    "proves\n",
+    "  3. A .hyp\n",
+    "  proves\n",
+    "  4. B     .imp elim 1,3\n",
+    "  5. C     .imp elim 2,4\n",
+    "6. A imp C .imp intro 3-5\n",
+    "'''\n",
+    "print(parse_fitch(prf_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp\n",
+      "├─\n",
+      "││2. A or C\t .hyp\n",
+      "│├─\n",
+      "│││3. A\t .hyp\n",
+      "││├─\n",
+      "│││4. B\t .imp elim 1,3\n",
+      "│││5. B or C\t .or intro 4\n",
+      "│││6. C\t .hyp\n",
+      "│││7. B or C\t .or intro 6\n",
+      "││8. B or C\t .or elim 2,3-5,6-7\n",
+      "│5. A or C imp B or C\t .imp intro 2-8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf_str = '''\n",
+    "1. A imp B .hyp\n",
+    "proves\n",
+    "  2. A or C .hyp\n",
+    "  proves\n",
+    "    3. A .hyp\n",
+    "    proves\n",
+    "    4. B .imp elim 1,3\n",
+    "    5. B or C .or intro 4\n",
+    "    6. C .hyp\n",
+    "    proves\n",
+    "    7. B or C .or intro 6\n",
+    "  8. B or C .or elim 2,3-5,6-7\n",
+    "9. A or C imp B or C .imp intro 2-8'''\n",
+    "print(parse_fitch(prf_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp\n",
+      "├─\n",
+      "││2. B\t .hyp\n",
+      "│├─\n",
+      "│││3. C\t .hyp\n",
+      "││├─\n",
+      "│││4. B and c\t .and intro 2,3\n",
+      "│4. B imp C imp B and C\t .imp intro 2-4\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf_str = '''\n",
+    "1. A .hyp\n",
+    "proves\n",
+    "  2. B .hyp\n",
+    "  proves\n",
+    "    3. C .hyp\n",
+    "    proves\n",
+    "    4. B and c .and intro 2,3\n",
+    "5. B imp (C imp B and C) .imp intro 2-4\n",
+    "'''\n",
+    "print(parse_fitch(prf_str))"
+   ]
   }
  ],
  "metadata": {
