--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -81,11 +81,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
-      "│2. A\t .hyp\n",
+      "None. A imp B\t .hyp\n",
+      "None. A\t .hyp\n",
       "├─\n",
-      "│3. B\t .imp elim 1,2\n",
-      "│4. A\t .repeat 2\n",
+      "None. B\t .imp elim 1,2\n",
+      "None. A\t .repeat 2\n",
       "\n"
      ]
     }
@@ -117,14 +117,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
-      "│2. B imp C\t .hyp\n",
+      "None. A imp B\t .hyp\n",
+      "None. B imp C\t .hyp\n",
       "├─\n",
-      "││3. A\t .hyp\n",
-      "│├─\n",
-      "││4. B\t .imp elim 1,3\n",
-      "││5. C\t .imp elim 2,4\n",
-      "│6. A imp C\t .imp intro 3-5\n",
+      "None. A\t .hyp\n",
+      "├─\n",
+      "None. B\t .imp elim 1,3\n",
+      "None. C\t .imp elim 2,4\n",
+      "None. A imp C\t .imp intro 3-5\n",
       "\n"
      ]
     }
@@ -297,7 +297,7 @@
       "  }}\n",
       "  B or C .or elim 2,3-5,6-7\n",
       "}}\n",
-      "A or C imp B .or C imp intro 2-8\n"
+      "A or C imp B or C .imp intro 2-8\n"
      ]
     }
    ],
@@ -315,14 +315,14 @@
     "    proves\n",
     "    7. B or C .or intro 6\n",
     "  8. B or C .or elim 2,3-5,6-7\n",
-    "9. A or C imp B .or C imp intro 2-8'''\n",
+    "9. A or C imp B or C .imp intro 2-8'''\n",
     "lines = get_str_li(prf_str, tabsize=2)\n",
     "print_lines(lines)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,12 +344,13 @@
     "proves\n",
     "3. A and B .and intro\n",
     "'''\n",
-    "print(parse_fitch(prf_str))"
+    "proof = parse_fitch(prf_str)\n",
+    "print(proof)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,12 +380,12 @@
     "  5. C     .imp elim 2,4\n",
     "6. A imp C .imp intro 3-5\n",
     "'''\n",
-    "print(parse_fitch(prf_str))"
+    "print(proof := parse_fitch(prf_str))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
       "│││6. C\t .hyp\n",
       "│││7. B or C\t .or intro 6\n",
       "││8. B or C\t .or elim 2,3-5,6-7\n",
-      "│5. A or C imp B or C\t .imp intro 2-8\n",
+      "│9. A or C imp B or C\t .imp intro 2-8\n",
       "\n"
      ]
     }
@@ -421,13 +422,47 @@
     "    proves\n",
     "    7. B or C .or intro 6\n",
     "  8. B or C .or elim 2,3-5,6-7\n",
-    "9. A or C imp B or C .imp intro 2-8'''\n",
-    "print(parse_fitch(prf_str))"
+    "9. A or C imp B or C .imp intro 2-8\n",
+    "'''\n",
+    "print(proof := parse_fitch(prf_str))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0] (1)\n",
+      "[0, 1, 0] (2)\n",
+      "[0, 1, 1, 0] (3)\n",
+      "[0, 1, 1, 1] (4)\n",
+      "[0, 1, 1, 2] (5)\n",
+      "[0, 1, 1, 3] (6)\n",
+      "[0, 1, 1, 4] (7)\n",
+      "[0, 1, 2] (8)\n",
+      "[0, 2] (9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_indices(proof):\n",
+    "  assert proof.children\n",
+    "  for kid in proof.children:\n",
+    "    if kid.children:\n",
+    "      print_indices(kid)\n",
+    "    else:\n",
+    "      print(f\"{kid.index} ({kid.line_num})\")\n",
+    "\n",
+    "print_indices(proof)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +476,7 @@
       "│││3. C\t .hyp\n",
       "││├─\n",
       "│││4. B and c\t .and intro 2,3\n",
-      "│4. B imp C imp B and C\t .imp intro 2-4\n",
+      "│5. B imp C imp B and C\t .imp intro 2-4\n",
       "\n"
      ]
     }
@@ -457,7 +492,7 @@
     "    4. B and c .and intro 2,3\n",
     "5. B imp (C imp B and C) .imp intro 2-4\n",
     "'''\n",
-    "print(parse_fitch(prf_str))"
+    "print(proof := parse_fitch(prf_str))"
    ]
   }
  ],
