--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,42 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'propositional.Ann'>\n",
-      "input_str = hyp\n",
-      "rule: hyp\n",
-      "premise: []\n",
-      "True\n",
-      "rule: or elim\n",
-      "premise: [3, (4, 8), (9, 14)]\n",
-      "or elim\n",
-      "[3, (4, 8), (9, 14)]\n"
+      "input_str = ' imp  intro   4-8 '\n",
+      "rule: imp intro\n",
+      "premise: [(4, 8)]\n",
+      "\n",
+      "output from __str__():\n",
+      "  imp intro 4-8\n"
      ]
     }
    ],
    "source": [
-    "s = \"hyp\"\n",
-    "ann = Ann(s)\n",
-    "print(type(ann))\n",
-    "print(f\"input_str = {s}\")\n",
-    "print(ann.build_str())\n",
-    "print(ann.rule=='hyp')\n",
-    "s2 = \"or elim 3,4-8,9-14\"\n",
-    "ann2 = Ann(s2)\n",
-    "print(ann2.build_str())\n",
-    "print(ann2.rule)\n",
-    "print(ann2.premise)"
+    "# Construct an Ann object from a string.\n",
+    "s = \" imp  intro   4-8 \"\n",
+    "try:\n",
+    "  ann = Ann(s)\n",
+    "  print(f\"input_str = '{ann.input_str}'\")\n",
+    "  print(ann.build_str())\n",
+    "  print(\"\\noutput from __str__():\")\n",
+    "  print(\" \", ann)\n",
+    "except Exception as e:\n",
+    "    print(e)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +61,7 @@
     }
    ],
    "source": [
+    "# Construct a NodeLabel object from a string.\n",
     "line = \"A imp B .hyp\"\n",
     "label = NodeLabel('formula', line)\n",
     "print(label.build_str())\n",
@@ -74,23 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None. A imp B\t .hyp\n",
-      "None. A\t .hyp\n",
+      "│1. A imp B\t .hyp\n",
+      "│2. A\t .hyp\n",
       "├─\n",
-      "None. B\t .imp elim 1,2\n",
-      "None. A\t .repeat 2\n",
+      "│3. B\t .imp elim 1,2\n",
+      "│4. A\t .repeat 2\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Construct a ProofNode manually. (not by using the parser)\n",
     "line1 = \"A imp B .hyp\"\n",
     "label1 = NodeLabel('formula', line1)\n",
     "node1 = ProofNode(label1)\n",
@@ -105,31 +103,33 @@
     "node4 = ProofNode(label4)\n",
     "label0 = NodeLabel()\n",
     "node0 = ProofNode(label0, [node1, node2, node3, node4])\n",
+    "node0.build_index()\n",
     "print(node0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None. A imp B\t .hyp\n",
-      "None. B imp C\t .hyp\n",
+      "│1. A imp B\t .hyp\n",
+      "│2. B imp C\t .hyp\n",
       "├─\n",
-      "None. A\t .hyp\n",
-      "├─\n",
-      "None. B\t .imp elim 1,3\n",
-      "None. C\t .imp elim 2,4\n",
-      "None. A imp C\t .imp intro 3-5\n",
+      "││3. A\t .hyp\n",
+      "│├─\n",
+      "││4. B\t .imp elim 1,3\n",
+      "││5. C\t .imp elim 2,4\n",
+      "│6. A imp C\t .imp intro 3-5\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Another example, similar to the one above.\n",
     "line1 = \"A imp B .hyp\"\n",
     "label1 = NodeLabel('formula', line1)\n",
     "node1 = ProofNode(label1)\n",
@@ -152,12 +152,13 @@
     "label_sub = NodeLabel()\n",
     "node_sub = ProofNode(label_sub, [node3, node4, node5])\n",
     "node_root = ProofNode(label_root, [node1, node2, node_sub, node6])\n",
+    "node_root.build_index()\n",
     "print(node_root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -208,9 +209,16 @@
     }
    ],
    "source": [
+    "# This is a test for the preprocessing function get_str_li().\n",
+    "# The output of get_str_li() is a list of strings \n",
+    "# to be fed to the parser.\n",
+    "\n",
     "# You may or may not prefix each line with line number.\n",
     "# The parser can assign the correct line number \n",
     "# to each node anyway.\n",
+    "# You may also use | instead  of TAB to indent subproofs.\n",
+    "# The following 4 input strings are all equivalent---they \n",
+    "# are parsed into the same proof tree.\n",
     "\n",
     "prf_str1 = '''\n",
     "1. A imp B .hyp\n",
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -289,9 +297,11 @@
       "{{\n",
       "  A or C .hyp\n",
       "  {{\n",
-      "    A .hyp\n",
+      "    A .hyp   \n",
       "    B .imp elim 1,3\n",
       "    B or C .or intro 4\n",
+      "  }}\n",
+      "  {{\n",
       "    C .hyp\n",
       "    B or C .or intro 6\n",
       "  }}\n",
@@ -302,12 +312,17 @@
     }
    ],
    "source": [
+    "# Another example.\n",
+    "\n",
+    "# This is a Fitch proof for \n",
+    "#         A -> B |- (A or C) -> (B or C)\n",
+    "#\n",
     "prf_str = '''\n",
     "1. A imp B .hyp\n",
     "proves\n",
     "  2. A or C .hyp\n",
     "  proves\n",
-    "    3. A .hyp\n",
+    "    3. A .hyp   \n",
     "    proves\n",
     "    4. B .imp elim 1,3\n",
     "    5. B or C .or intro 4\n",
@@ -322,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -338,6 +353,7 @@
     }
    ],
    "source": [
+    "# This is a test for the parser.\n",
     "prf_str = '''\n",
     "1. A .hyp\n",
     "2. B  .hyp\n",
@@ -350,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +386,7 @@
     }
    ],
    "source": [
+    "# Another test for the parser.\n",
     "prf_str = '''\n",
     "1. A imp B .hyp\n",
     "2. B imp C .hyp\n",
@@ -385,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +418,7 @@
       "│││4. B\t .imp elim 1,3\n",
       "│││5. B or C\t .or intro 4\n",
       "│││6. C\t .hyp\n",
+      "││├─\n",
       "│││7. B or C\t .or intro 6\n",
       "││8. B or C\t .or elim 2,3-5,6-7\n",
       "│9. A or C imp B or C\t .imp intro 2-8\n",
@@ -409,6 +427,11 @@
     }
    ],
    "source": [
+    "# Another test for the parser.\n",
+    "# Note that the parser can handle the case where\n",
+    "# two subproofs at the same level are adjacent.\n",
+    "# It is a little hard to see that line 6 starts a new subproof.\n",
+    "# This will be solved by the LaTeX output later.\n",
     "prf_str = '''\n",
     "1. A imp B .hyp\n",
     "proves\n",
@@ -429,70 +452,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0] (1)\n",
-      "[0, 1, 0] (2)\n",
-      "[0, 1, 1, 0] (3)\n",
-      "[0, 1, 1, 1] (4)\n",
-      "[0, 1, 1, 2] (5)\n",
-      "[0, 1, 1, 3] (6)\n",
-      "[0, 1, 1, 4] (7)\n",
-      "[0, 1, 2] (8)\n",
-      "[0, 2] (9)\n"
+      "{'1-9': [0],\n",
+      " '1': [0, 0],\n",
+      " '2-8': [0, 1],\n",
+      " '2': [0, 1, 0],\n",
+      " '3-5': [0, 1, 1],\n",
+      " '3': [0, 1, 1, 0],\n",
+      " '4': [0, 1, 1, 1],\n",
+      " '5': [0, 1, 1, 2],\n",
+      " '6-7': [0, 1, 2],\n",
+      " '6': [0, 1, 2, 0],\n",
+      " '7': [0, 1, 2, 1],\n",
+      " '8': [0, 1, 3],\n",
+      " '9': [0, 2]}\n"
      ]
     }
    ],
    "source": [
-    "def print_indices(proof):\n",
-    "  assert proof.children\n",
-    "  for kid in proof.children:\n",
-    "    if kid.children:\n",
-    "      print_indices(kid)\n",
-    "    else:\n",
-    "      print(f\"{kid.index} ({kid.line_num})\")\n",
-    "\n",
-    "print_indices(proof)\n"
+    "index_dict = proof.build_index_dict()\n",
+    "pprint(index_dict, sort_dicts=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A\t .hyp\n",
-      "├─\n",
-      "││2. B\t .hyp\n",
-      "│├─\n",
-      "│││3. C\t .hyp\n",
-      "││├─\n",
-      "│││4. B and c\t .and intro 2,3\n",
-      "│5. B imp C imp B and C\t .imp intro 2-4\n",
-      "\n"
+      "1 <= 4\n",
+      "1 <= 5\n",
+      "1 <= 7\n",
+      "1 <= 8\n",
+      "1 <= 9\n",
+      "2-8 <= 9\n",
+      "2 <= 4\n",
+      "2 <= 5\n",
+      "2 <= 7\n",
+      "2 <= 8\n",
+      "3-5 <= 7\n",
+      "3-5 <= 8\n",
+      "3 <= 4\n",
+      "3 <= 5\n",
+      "4 <= 5\n",
+      "6-7 <= 8\n",
+      "6 <= 7\n"
      ]
     }
    ],
    "source": [
-    "prf_str = '''\n",
-    "1. A .hyp\n",
-    "proves\n",
-    "  2. B .hyp\n",
-    "  proves\n",
-    "    3. C .hyp\n",
-    "    proves\n",
-    "    4. B and c .and intro 2,3\n",
-    "5. B imp (C imp B and C) .imp intro 2-4\n",
-    "'''\n",
-    "print(proof := parse_fitch(prf_str))"
+    "for i in index_dict:\n",
+    "  for j in index_dict:\n",
+    "    label_j = proof.get_node(j).label\n",
+    "    if label_j.type == 'formula' and not label_j.is_hyp: # conclusion\n",
+    "      if proof.is_earlier(i, j):\n",
+    "        print(f\"{i} <= {j}\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fmla = FormulaProp('bot')\n",
+    "node1 = parse_ast('not (A iff not C_1)')\n",
+    "node2 = parse_ast('A iff not C_1')\n",
+    "fmla.verified_by(RuleInfer.BOT_INTRO, [node1, node2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fmla.verified_by(RuleInfer.BOT_INTRO, [node2, node1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('bot')\n",
+    "fmla = FormulaProp('not (A iff not C_1)')\n",
+    "fmla.verified_by(RuleInfer.BOT_ELIM, [node1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A imp bot')\n",
+    "fmla = FormulaProp('not A')\n",
+    "fmla.verified_by(RuleInfer.NOT_INTRO, [node1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('not A imp bot')\n",
+    "fmla = FormulaProp('A')\n",
+    "fmla.verified_by(RuleInfer.NOT_ELIM, [node1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A imp B')\n",
+    "node2 = parse_ast('forall x B1(x)')\n",
+    "fmla = FormulaProp('forall x B1(x) and (A imp B)')\n",
+    "fmla.verified_by(RuleInfer.AND_INTRO, [node1, node2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node2 = parse_ast('A imp B')\n",
+    "node1 = parse_ast('forall x B1(x)')\n",
+    "fmla = FormulaProp('forall x B1(x) and (A imp B)')\n",
+    "fmla.verified_by(RuleInfer.AND_INTRO, [node1, node2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('forall x B1(x) and (A imp B)')\n",
+    "fmla1 = FormulaProp('A imp B')\n",
+    "fmla2 = FormulaProp('forall x B1(x)')\n",
+    "print(fmla1.verified_by(RuleInfer.AND_ELIM, [node1]))\n",
+    "print(fmla2.verified_by(RuleInfer.AND_ELIM, [node1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A')\n",
+    "node2 = parse_ast('B')\n",
+    "fmla = FormulaProp('A or B')\n",
+    "print(fmla.verified_by(RuleInfer.OR_INTRO, [node1]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_INTRO, [node2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A or B')\n",
+    "node2 = parse_ast('A imp C')\n",
+    "node3 = parse_ast('B imp C')\n",
+    "fmla = FormulaProp('C')\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node1, node2, node3]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node1, node3, node2]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node2, node1, node3]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node2, node3, node1]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node3, node1, node2]))\n",
+    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node3, node2, node1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A imp B')\n",
+    "fmla = FormulaProp('A imp B')\n",
+    "print(fmla.verified_by(RuleInfer.IMP_INTRO, [node1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla = FormulaProp('B1(x)')\n",
+    "node1 = parse_ast('(A iff not C_1) imp B1(x)')\n",
+    "node2 = parse_ast('A iff not C_1')\n",
+    "print(fmla.verified_by(RuleInfer.IMP_ELIM, [node1, node2]))\n",
+    "print(fmla.verified_by(RuleInfer.IMP_ELIM, [node2, node1]))\n",
+    "print(fmla.verified_by(RuleInfer.AND_INTRO, [node1, node2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla = FormulaProp('not C_1 iff B1(x)')\n",
+    "node1 = parse_ast('not C_1 imp B1(x)')\n",
+    "node2 = parse_ast('B1(x) imp not C_1')\n",
+    "print(fmla.verified_by(RuleInfer.IFF_INTRO, [node1, node2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla = FormulaProp('B1(x)')\n",
+    "node2 = parse_ast('not C_1 iff B1(x)')\n",
+    "node1 = parse_ast('not C_1')\n",
+    "print(fmla.verified_by(RuleInfer.IFF_ELIM, [node1, node2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla = FormulaProp('not C_1')\n",
+    "node2 = parse_ast('not C_1 iff B1(x)')\n",
+    "node1 = parse_ast('B1(x)')\n",
+    "print(fmla.verified_by(RuleInfer.IFF_ELIM, [node1, node2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = parse_ast('A or B')\n",
+    "fmla = FormulaProp('A or B')\n",
+    "print(fmla.verified_by(RuleInfer.REPEAT, [node1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla1 = FormulaProp('not not A_1 or not A_1')\n",
+    "fmla2 = FormulaProp('A_1')\n",
+    "print(fmla1.verified_by(RuleInfer.LEM))\n",
+    "print(fmla2.verified_by(RuleInfer.LEM))\n",
+    "print(fmla1.verified_by(RuleInfer.HYP))\n",
+    "print(fmla1.verified_by(RuleInfer.HYP))"
    ]
   }
  ],
